--- a/components/navBar/navbar.scss
+++ b/components/navBar/navbar.scss
@@ -1,61 +1,65 @@
+@import "../../src/style.scss";
+
 .navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  height: 50px;
-  border-bottom: 1px solid themed("border");
-  position: sticky;
-  top: 0;
-  background-color: themed("bg");
-  color: themed("textColor");
-  z-index: 999;
-  .left {
+  @include themify($themes) {
     display: flex;
     align-items: center;
-    gap: 30px;
-
-    span {
-      font-weight: bold;
-      font-size: 20px;
-      color: themed("logo");
-    }
-
-    .search {
+    justify-content: space-between;
+    padding: 10px 20px;
+    height: 50px;
+    border-bottom: 1px solid themed("border");
+    position: sticky;
+    top: 0;
+    background-color: themed("bg");
+    color: themed("textColor");
+    z-index: 999;
+    .left {
       display: flex;
       align-items: center;
-      gap: 10px;
-      border: 1px solid themed("border");
-      border-radius: 5px;
-      padding: 5px;
+      gap: 30px;
 
-      input {
-        border: none;
-        width: 500px;
-        background-color: transparent;
-        color: themed("textColor");
+      span {
+        font-weight: bold;
+        font-size: 20px;
+        color: themed("logo");
       }
-    }
 
-    .right {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-
-      .user {
+      .search {
         display: flex;
         align-items: center;
         gap: 10px;
-        font-weight: 500;
+        border: 1px solid themed("border");
+        border-radius: 5px;
+        padding: 5px;
 
-        img {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          object-fit: cover;
+        input {
+          border: none;
+          width: 500px;
+          background-color: transparent;
+          color: themed("textColor");
         }
+      }
 
-        span {
+      .right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-weight: 500;
+
+          img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          span {
+          }
         }
       }
     }
