--- a/components/navBar/navbar.scss
+++ b/components/navBar/navbar.scss
@@ -13,6 +13,7 @@
     background-color: themed("bg");
     color: themed("textColor");
     z-index: 999;
+
     .left {
       display: flex;
       align-items: center;
@@ -37,29 +38,45 @@
           width: 500px;
           background-color: transparent;
           color: themed("textColor");
+
+          @include mobile {
+            display: none;
+          }
+
+          @include tablet {
+            width: 200px;
+          }
         }
       }
+    }
 
-      .right {
+    .right {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      @include mobile {
+        display: none;
+      }
+
+      .user {
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
+        font-weight: 500;
 
-        .user {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          font-weight: 500;
+        @include tablet {
+          display: none;
+        }
 
-          img {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
+        img {
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
 
-          span {
-          }
+        span {
         }
       }
     }
