--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 @import "../../style.scss";
 
 .home {
-  height: 100vh;
+  min-height: 100vh;
   @include themify($themes) {
     padding: 20px 70px;
     background-color: themed("bgSoft");
